Vue.js and w3 css setup

--- a/pixel3Dapp/templates/pixel3d/index.html
+++ b/pixel3Dapp/templates/pixel3d/index.html
@@ -1,1 +1,7 @@
+{% load static %}
+
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="{% static 'pixel3d/main_view.js' %}"></script>
+
 <h1>Welcome to the PixelArt to 3D Model generator</h1>
+<div id="main_view"></div>
