Sprite renaming and tests (server side)

--- a/pixel3Dapp/templates/pixel3d/index.html
+++ b/pixel3Dapp/templates/pixel3d/index.html
@@ -1,7 +1,1 @@
-{% load static %}
-
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script src="{% static 'pixel3d/main_view.js' %}"></script>
-
-<h1>Welcome to the PixelArt to 3D Model generator</h1>
-<div id="main_view"></div>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/static/pixel3d/favicon.ico><link rel=stylesheet href=https://www.w3schools.com/w3css/4/w3.css><link rel=stylesheet href=https://www.w3schools.com/lib/w3-theme-indigo.css><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css><title>3D Pixel Art Generator</title><link href=/static/pixel3d/css/app.5235a816.css rel=preload as=style><link href=/static/pixel3d/js/app.c95a77d0.js rel=preload as=script><link href=/static/pixel3d/js/chunk-vendors.ab5b1059.js rel=preload as=script><link href=/static/pixel3d/css/app.5235a816.css rel=stylesheet></head><body class=w3-theme-light><noscript><strong>We're sorry but vue_project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/static/pixel3d/js/chunk-vendors.ab5b1059.js></script><script src=/static/pixel3d/js/app.c95a77d0.js></script></body></html>
